--- a/environment.yml
+++ b/environment.yml
@@ -59,5 +59,6 @@ dependencies:
       - pyusb==1.3.1
       - rpi-gpio==0.7.1
       - rpi-ws281x==5.0.0
+      - smbus2==0.4.3
       - sysv-ipc==1.1.0
       - typing-extensions==4.12.2
